fix(core): possible NPE when validating a flow